fixed overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,10 @@ html {
   background: var(--background);
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   color: var(--accent);
   cursor: pointer;
